Update requirements.txt with all needed packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
 Flask
-python-dotenv
-requests
 Flask-SQLAlchemy
 Flask-Login
-oauthlib
-gunicorn
 Flask-Mail
+Flask-Dance
+Flask-Migrate
+itsdangerous
+pandas
+chardet
+Werkzeug
+selenium
+gunicorn
+webdriver-manager
+openpyxl
